Posting 화면에 닫기 버튼 이미지 수정 DetailedPost 쪽지보내기 버튼 색 수정 댓글 삭제버튼 이미지 수정

--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -78,10 +78,11 @@
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="10dp"
                         android:layout_weight="1"
-                        android:background="@color/bootstrap_brand_success"
+                        android:background="@color/light_olive_green"
                         android:fontFamily="sans-serif"
                         android:onClick="onClicksendMessage"
-                        android:text="쪽지 보내기" />
+                        android:text="쪽지 보내기"
+                        android:textColor="@android:color/white" />
 
                     <TextView
                         android:id="@+id/dp_posted_time"
