--- a/app/src/main/res/layout/activity_homefeed.xml
+++ b/app/src/main/res/layout/activity_homefeed.xml
@@ -55,10 +55,20 @@
                     android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/chat"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/chat"
+                        android:onClick="selectCategory" />
+
+                    <Button
                         android:id="@+id/cook"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/recipies"
                         android:onClick="selectCategory" />
 
@@ -66,7 +76,8 @@
                         android:id="@+id/room"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/roominfo"
                         android:onClick="selectCategory" />
 
@@ -74,7 +85,8 @@
                         android:id="@+id/activities"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/schoolact"
                         android:onClick="selectCategory" />
 
@@ -82,7 +94,8 @@
                         android:id="@+id/tips"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/tips"
                         android:onClick="selectCategory" />
 
@@ -90,7 +103,8 @@
                         android:id="@+id/eatout"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/eatout"
                         android:onClick="selectCategory" />
 
@@ -98,7 +112,8 @@
                         android:id="@+id/trans"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:background="@drawable/trans"
                         android:onClick="selectCategory" />
                 </LinearLayout>
