--- a/app/src/main/res/layout/activity_my_menu.xml
+++ b/app/src/main/res/layout/activity_my_menu.xml
@@ -153,6 +153,14 @@
                 app:layout_constraintStart_toEndOf="@+id/my_posts"
                 app:layout_constraintTop_toBottomOf="@+id/mymenu_created_at"
                 app:layout_constraintVertical_bias="0.386" />
+
+            <Button
+                android:id="@+id/go_liking_posts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="내가 좋아하는 글"
+                app:layout_constraintBaseline_toBaselineOf="@+id/button_logout"
+                app:layout_constraintStart_toStartOf="@+id/my_posts" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
