--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -24,7 +24,9 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="3dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -39,14 +41,6 @@
                         android:visibility="gone"
                         app:srcCompat="@drawable/splash_img" />
 
-
-                    <ImageView
-                        android:id="@+id/btn_like"
-                        android:layout_width="53dp"
-                        android:layout_height="53dp"
-                        android:layout_gravity="right"
-                        android:onClick="onClickLike"
-                        app:srcCompat="@drawable/like" />
 
                     <TextView
                         android:id="@+id/dp_title"
@@ -68,21 +62,40 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="5dp"
                         android:layout_weight="1"
-                        android:text="@string/hint_user_id" />
+                        android:textSize="15sp"
+                        android:text="@string/hint_user_id"
+                        android:textStyle="bold"/>
 
-                    <Button
-                        android:id="@+id/button2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_weight="1"
-                        android:background="@color/light_olive_green"
-                        android:fontFamily="sans-serif"
-                        android:onClick="onClicksendMessage"
-                        android:text="쪽지 보내기"
-                        android:textColor="@android:color/white" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/button2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/my_button"
+                            android:fontFamily="sans-serif"
+                            android:onClick="onClicksendMessage"
+                            android:text="쪽지 보내기"
+                            android:textColor="@android:color/white"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/btn_like"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginEnd="10dp"
+                            android:onClick="onClickLike"
+                            app:srcCompat="@drawable/like" />
+                    </RelativeLayout>
 
                     <TextView
                         android:id="@+id/dp_posted_time"
@@ -90,6 +103,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
+
                         android:text="Tme" />
 
                     <TextView
@@ -101,8 +115,8 @@
                         android:layout_marginRight="10dp"
                         android:layout_marginBottom="10dp"
                         android:text="body"
-                        android:textSize="15sp"
-                        android:textStyle="normal" />
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <Button
                         android:id="@+id/find_location"
@@ -111,6 +125,7 @@
                         android:backgroundTint="@color/light_olive_green"
                         android:text="음식점 위치 검색하기"
                         android:textColor="@color/white"
+                        android:textStyle="bold"
                         android:visibility="gone" />
 
                     <TextView
@@ -155,7 +170,8 @@
             <ListView
                 android:id="@+id/list_comments"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:divider="@null">
 
             </ListView>
 
