--- a/app/src/main/res/layout/item_comments.xml
+++ b/app/src/main/res/layout/item_comments.xml
@@ -9,7 +9,9 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/bootstrap_gray_light">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:cardCornerRadius="8dp">
 
 
         <LinearLayout
@@ -36,7 +38,8 @@
                         android:layout_weight="1"
                         android:gravity="left"
                         android:text="@string/hint_user_id"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/comment_time"
@@ -57,7 +60,8 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:text="comment"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
 
                 <ImageButton
                     android:id="@+id/btn_comment_delete"
