--- a/app/src/main/res/layout/item_feeds.xml
+++ b/app/src/main/res/layout/item_feeds.xml
@@ -9,7 +9,9 @@
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="3dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -40,7 +42,6 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:text="Title"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                         android:textSize="30sp"
                         android:textStyle="bold" />
 
@@ -72,6 +73,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="3"
+                    android:textStyle="bold"
                     android:text="UserID" />
 
                 <TextView
@@ -83,7 +85,8 @@
                     android:layout_marginEnd="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="2"
-                    android:text="Time" />
+                    android:text="Time"
+                    android:textAlignment="textEnd" />
 
                 <LinearLayout
                     android:id="@+id/likes_comments"
@@ -110,6 +113,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="0"
+                        android:textStyle="bold"
                         android:text="0"
                         android:textSize="15sp" />
                 </LinearLayout>
