--- a/app/src/main/res/layout/activity_posting_transaction.xml
+++ b/app/src/main/res/layout/activity_posting_transaction.xml
@@ -25,6 +25,7 @@
             app:srcCompat="@drawable/cross" />
 
         <com.beardedhen.androidbootstrap.BootstrapLabel
+            android:id="@+id/posting_title"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/bootstrap_dropdown_default_item_height"
             android:layout_marginLeft="1dp"
