--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     tools:context=".SendMessage">
 
+    <com.beardedhen.androidbootstrap.BootstrapLabel
+        android:id="@+id/send_message_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:bootstrapBrand="regular"
+        app:bootstrapHeading="h3"
+        android:text="sada">
+    </com.beardedhen.androidbootstrap.BootstrapLabel>
+
     <Button
         android:id="@+id/btn_sendmessage"
         android:layout_width="wrap_content"
@@ -17,20 +26,11 @@
         android:text="보내기" />
 
     <EditText
-        android:id="@+id/message_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/bootstrap_h5_hori_padding"
-        android:ems="10"
-        android:hint="제목"
-        android:inputType="textPersonName" />
-
-    <EditText
         android:id="@+id/message_context"
         android:layout_width="match_parent"
         android:layout_height="320dp"
         android:layout_margin="@dimen/bootstrap_h5_hori_padding"
         android:ems="10"
-        android:hint="내용"
+        android:hint="내용을 입력하세요"
         android:inputType="textMultiLine" />
 </LinearLayout>
