--- a/app/src/main/res/layout/item_detailed_messages.xml
+++ b/app/src/main/res/layout/item_detailed_messages.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_detailed_message_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants"
     android:focusable="false"
     android:focusableInTouchMode="false"
-    android:descendantFocusability="blocksDescendants" >
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/message_item"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/bootstrap_gray_light"
+        android:descendantFocusability="blocksDescendants"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:descendantFocusability="blocksDescendants" >
-
+        app:cardBackgroundColor="@color/bootstrap_gray_light">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_marginTop="2dp"
             android:background="@color/bootstrap_brand_secondary_fill"
