액티비티 패키지화

--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SendMessage">
+    tools:context=".MessageActivities.SendMessage">
 
     <com.beardedhen.androidbootstrap.BootstrapLabel
         android:id="@+id/send_message_label"
