--- a/app/src/main/res/layout/activity_detailed_message.xml
+++ b/app/src/main/res/layout/activity_detailed_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailedMessage">
+    tools:context=".MessageActivities.DetailedMessage">
     <com.beardedhen.androidbootstrap.BootstrapLabel
         android:id="@+id/detailed_message_label"
         android:layout_width="match_parent"
