--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -94,20 +94,16 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
 
-                            <Button
+                            <ImageButton
                                 android:id="@+id/btn_send_message"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="5dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginRight="5dp"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginTop="20dp"
+                                android:layout_marginEnd="20dp"
                                 android:layout_marginBottom="10dp"
-                                android:background="@drawable/my_button"
-                                android:fontFamily="sans-serif"
-                                android:onClick="onClicksendMessage"
-                                android:text="쪽지 보내기"
-                                android:textColor="@android:color/white"
-                                android:textStyle="bold" />
+                                android:layout_toStartOf="@+id/btn_like"
+                                android:background="@drawable/plane"
+                                android:onClick="onClicksendMessage" />
 
                             <ImageView
                                 android:id="@+id/btn_like"
