xml 디자인 수정(이미지버튼, 텍스트뷰 추가, 댓글 리스트뷰 수정)

--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -21,9 +21,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|center"
-        android:background="@color/bootstrap_brand_primary"
+        android:background="@drawable/my_button"
         android:onClick="onClickSendButton"
-        android:text="보내기" />
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:text="보내기"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/message_context"
