--- a/app/src/main/res/layout/activity_my_messages.xml
+++ b/app/src/main/res/layout/activity_my_messages.xml
@@ -4,24 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MyMenuActivities.MyMessages">
 
     <TextView
-        android:id="@+id/no_item_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="쪽지가 없습니다!"
-        android:visibility="gone" />
-
-    <ListView
-        android:id="@+id/message_listview"
         android:layout_width="match_parent"
-        android:descendantFocusability="blocksDescendants"
-        android:clickable="true"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center_horizontal"
+        android:lineSpacingExtra="0.7sp"
+        android:text="내 쪽지함"
+        android:textAlignment="gravity"
+        android:textColor="@color/light_olive_green"
+        android:textIsSelectable="false"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-    </ListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/no_item_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="쪽지가 없습니다!"
+            android:visibility="gone" />
+
+        <ListView
+            android:id="@+id/message_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:descendantFocusability="blocksDescendants"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
+
+        </ListView>
+    </LinearLayout>
+
 </LinearLayout>
