--- a/app/src/main/res/layout/item_detailed_messages.xml
+++ b/app/src/main/res/layout/item_detailed_messages.xml
@@ -13,10 +13,13 @@
         android:id="@+id/message_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:descendantFocusability="blocksDescendants"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        app:cardBackgroundColor="@color/bootstrap_gray_light">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="3dp">
 
         <LinearLayout
             android:layout_width="300dp"
@@ -39,22 +42,25 @@
                         android:id="@+id/detailed_message_nickname"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_marginEnd="5dp"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:gravity="left"
                         android:text="@string/hint_user_id"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/detailed_message_send_time"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:text="Time"
-                        android:textSize="13sp" />
+                        android:textSize="10sp" />
                 </LinearLayout>
 
                 <TextView
@@ -63,8 +69,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginEnd="15dp"
                     android:text="context"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="normal" />
 
             </LinearLayout>
 
